use local jquery

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
       Taigame v1.0
     </title>
     <link rel="stylesheet" href="game.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="libs/jquery-1.9.1.min.js"></script>
   </head>
   <body>
 
