introduce car object

--- a/game.html
+++ b/game.html
@@ -22,20 +22,21 @@
         }
       }
 
-      var x = 0;
-      var y = 9;
+      //var car = {};
+      //car.x = 0; car.y = 9;
+      var car = { x: 0, y: 9 };
 
-      function showCar() {
+      car.show = function() {
 
-        console.log("x: " + x + " / y: " + y);
+        console.log("x: " + this.x + " / y: " + this.y);
 
         $('td').css('background-color', 'white');
-        var row = $('tr')[y];
-        var cell = $(row).find('td')[x];
+        var row = $('tr')[this.y];
+        var cell = $(row).find('td')[this.x];
         $(cell).css('background-color', 'red');
-      }
+      };
 
-      showCar();
+      car.show();
 
       $(window).on('keyup', function(ev) {
 
@@ -56,7 +57,7 @@
           if (y > h - 1) { y = h - 1; }
         }
 
-        showCar();
+        car.show();
       });
     </script>
   </body>
