--- a/game.html
+++ b/game.html
@@ -41,20 +41,20 @@
       $(window).on('keyup', function(ev) {
 
         if (ev.keyCode === 37) { // left
-          x = x - 1;
-          if (x < 0) { x = 0; }
+          car.x = car.x - 1;
+          if (car.x < 0) { car.x = 0; }
         }
         else if (ev.keyCode === 38) { // up
-          y = y - 1;
-          if (y < 0) { y = 0; }
+          car.y = car.y - 1;
+          if (car.y < 0) { car.y = 0; }
         }
         else if (ev.keyCode === 39) { // right
-          x = x + 1;
-          if (x > w - 1) { x = w - 1; }
+          car.x = car.x + 1;
+          if (car.x > w - 1) { car.x = w - 1; }
         }
         else if (ev.keyCode === 40) { // down
-          y = y + 1;
-          if (y > h - 1) { y = h - 1; }
+          car.y = car.y + 1;
+          if (car.y > h - 1) { car.y = h - 1; }
         }
 
         car.show();
