--- a/game.html
+++ b/game.html
@@ -35,33 +35,27 @@
         var cell = $(row).find('td')[this.x];
         $(cell).css('background-color', 'red');
       };
+
       car.move = function(direction) {
-        console.log(direction)
+
+        if (direction == 'left') this.x = this.x - 1;
+        else if (direction == 'up') this.y = this.y - 1;
+        else if (direction == 'right') this.x = this.x + 1;
+        else if (direction == 'down') this.y = this.y + 1;
+
+        if (this.x < 0) { this.x = 0; }
+        else if (this.x > w - 1) { this.x = w - 1; }
+        if (this.y < 0) { this.y = 0; }
+        else if (this.y > h - 1) { this.y = h - 1; }
       };
       car.show();
 
       $(window).on('keyup', function(ev) {
 
-        if (ev.keyCode === 37) { // left
-          //car.x = car.x - 1;
-          //if (car.x < 0) { car.x = 0; }
-          car.move('left');
-        }
-        else if (ev.keyCode === 38) { // up
-          //car.y = car.y - 1;
-          //if (car.y < 0) { car.y = 0; }
-          car.move('up');
-        }
-        else if (ev.keyCode === 39) { // right
-          //car.x = car.x + 1;
-          //if (car.x > w - 1) { car.x = w - 1; }
-          car.move('right');
-        }
-        else if (ev.keyCode === 40) { // down
-          //car.y = car.y + 1;
-          //if (car.y > h - 1) { car.y = h - 1; }
-          car.move('down');
-        }
+        if (ev.keyCode === 37) car.move('left');
+        else if (ev.keyCode === 38) car.move('up');
+        else if (ev.keyCode === 39) car.move('right');
+        else if (ev.keyCode === 40) car.move('down');
 
         car.show();
       });
