--- a/game.html
+++ b/game.html
@@ -12,17 +12,14 @@
     </table>
 
     <script>
-      var w = 10;
-      var h = 10;
+      var world = { w: 10, h: 10 };
 
-      for (var i = 0; i < h; i++) {
+      for (var i = 0; i < world.h; i++) {
         var tr = $('table.grid').append($('<tr>'));
-        for (var ii = 0; ii < w; ii++) {
+        for (var ii = 0; ii < world.w; ii++) {
           $('tr:last-child').append('<td>');
         }
       }
-
-      var world = {};
 
       world.display = function() {
 
@@ -35,6 +32,15 @@
         var carRow = $('tr')[this.car.y];
         var carCell = $(carRow).find('td')[this.car.x];
         $(carCell).css('background-color', 'red');
+
+        // display stones
+
+        for (var i = 0; i < this.stones.length; i++) {
+          var stone = this.stones[i];
+          var row = $('tr')[stone.y];
+          var cell = $(row).find('td')[stone.x];
+          $(cell).css('background-color', 'brown');
+        }
       }
 
       //
@@ -50,12 +56,24 @@
         else if (direction === 'down') this.y = this.y + 1;
 
         if (this.x < 0) { this.x = 0; }
-        else if (this.x > w - 1) { this.x = w - 1; }
+        else if (this.x > world.w - 1) { this.x = world.w - 1; }
         if (this.y < 0) { this.y = 0; }
-        else if (this.y > h - 1) { this.y = h - 1; }
+        else if (this.y > world.h - 1) { this.y = world.h - 1; }
       };
 
       world.car = car;
+
+      //
+      // stones concept
+
+      world.stones = [];
+
+      for (var i = 0; i < 7; i++) {
+        world.stones.push(
+          { x: parseInt(Math.random() * world.w),
+            y: parseInt(Math.random() * world.h) }
+        );
+      }
 
       //
       // change the world
