--- a/game.html
+++ b/game.html
@@ -59,6 +59,13 @@
         else if (this.x > world.w - 1) { this.x = world.w - 1; }
         if (this.y < 0) { this.y = 0; }
         else if (this.y > world.h - 1) { this.y = world.h - 1; }
+
+        for (var i = 0; i < world.stones.length; i++) {
+          var stone = world.stones[i];
+          if (stone.x === this.x && stone.y === this.y) {
+            stone.move(direction);
+          }
+        }
       };
 
       world.car = car;
@@ -69,10 +76,21 @@
       world.stones = [];
 
       for (var i = 0; i < 7; i++) {
-        world.stones.push(
-          { x: parseInt(Math.random() * world.w),
-            y: parseInt(Math.random() * world.h) }
-        );
+
+        var stone = {};
+
+        stone.x = parseInt(Math.random() * world.w);
+        stone.y = parseInt(Math.random() * world.h);
+
+        stone.move = function(direction) {
+
+          if (direction === 'left') this.x = this.x - 1;
+          else if (direction === 'up') this.y = this.y - 1;
+          else if (direction === 'right') this.x = this.x + 1;
+          else if (direction === 'down') this.y = this.y + 1;
+        };
+
+        world.stones.push(stone);
       }
 
       //
